<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Author"
    android:background="@drawable/background">
    <TextView
        android:id="@+id/tvHeader"
        style="@style/MyTextStyle"
        android:layout_width="417dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:background="@color/backgroundHeader"
        android:text="@string/Author"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFirstCitation"
        style="@style/MyBorderedText"
        android:layout_width="266dp"
        android:layout_height="256dp"
        android:layout_marginTop="100dp"
        android:text="@string/InfoAboutAuthor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/ButtonColor"
        android:text="@string/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFirstCitation" />

</androidx.constraintlayout.widget.ConstraintLayout>